# esp32c3-ble-hid

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
