[package]
name = "esp32c3-ble-hid"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.14.0", features = [
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32c3", "log"] }
esp-wifi = { version = "0.1.1", features = ["esp32c3", "ble", "async"] }
embassy-executor = { version = "0.4.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
] }
embassy-sync = { version = "0.5.0" }
bleps = { git = "https://github.com/bjoernQ/bleps.git", rev = "80fe4b26d3789f5bdfc8ab47e78455b8ca49be54", package = "bleps", features = [
    "macros",
    "async",
    "crypto",
] }
rand_core = { version = "0.6.4" }
embedded-hal-async = { version = "1.0.0-rc.2" }
static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-time = { version = "0.2.0" }

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor-macros", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d" }

esp-hal-common = { path = "/projects/esp/esp-hal/esp-hal-common" }
esp32-hal = { path = "/projects/esp/esp-hal/esp32-hal" }
esp32s2-hal = { path = "/projects/esp/esp-hal/esp32s2-hal" }
esp32s3-hal = { path = "/projects/esp/esp-hal/esp32s3-hal" }
esp32c2-hal = { path = "/projects/esp/esp-hal/esp32c2-hal" }
esp32c3-hal = { path = "/projects/esp/esp-hal/esp32c3-hal" }
esp32c6-hal = { path = "/projects/esp/esp-hal/esp32c6-hal" }
esp32h2-hal = { path = "/projects/esp/esp-hal/esp32h2-hal" }

esp-wifi = { path = "/projects/esp/esp-wifi/esp-wifi" }

[patch.'https://github.com/bjoernQ/bleps.git']
bleps = { path = "/projects/esp/bleps/bleps" }
