[package]
name = "esp32c3-ble-hid"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.15.0", features = [
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log", "uart"] }
esp-wifi = { version = "0.3.0", features = ["esp32c3", "ble", "async"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
] }
embassy-sync = { version = "0.5.0" }
bleps = { git = "https://github.com/bjoernQ/bleps.git", rev = "9371d7d4d510ba5c936c1eef96674f8fd4f63e8a", package = "bleps", features = [
    "macros",
    "async",
    "crypto",
] }
rand_core = { version = "0.6.4" }
embedded-hal-async = { version = "1.0.0-rc.2" }
static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-time = { version = "0.3.0" }
