[package]
name = "esp32c3-ble-hid"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp-hal", version = "0.16.0", features = [
    "esp32c3",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-backtrace = { version = "0.11.1", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log", "uart"] }
esp-wifi = { version = "0.4.0", features = ["esp32c3", "ble", "async"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
] }
embassy-sync = { version = "0.5.0" }
bleps = { git = "https://github.com/bjoernQ/bleps.git", rev = "1e35e76352dc37459bdf97d3dd266ca88741207e", package = "bleps", features = [
    "macros",
    "async",
    "crypto",
] }
rand_core = { version = "0.6.4" }
embedded-hal-async = { version = "1.0.0-rc.2" }
static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-time = { version = "0.3.0" }
